# QuickCV

./: .gitattributes  .gitignore  DATASET.md  ProjectProposal.docx  README.md  justfile  main.py  pyproject.toml  requirements.txt  yolov8m.pt  yolov8n.pt
.github/workflows/: ci.yml
benchmark_runs/: summary_table.md
dataset/yolo/: data.yaml
models/: FastModel.py  Model.py  __init__.py  decision.py  geometry.py  model.py
src/: benchmark.py  download_dataset.py  export.py  train.py  validate_models.py
tests/: test_decision.py  test_geometry.py
yolov8m_320_openvino_model/: metadata.yaml  yolov8m.xml
yolov8m_int8_320_openvino_model/: metadata.yaml  yolov8m.xml
yolov8n_640_openvino_model/: metadata.yaml
yolov8n_640_openvino_model/yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
yolov8n_int8_640_openvino_model/: metadata.yaml  yolov8n.xml
